# CSD2c_Eindopdracht

./: .gitignore  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Flow  Makefile  README.md  TODO  Util.h  Zieke file  app  delay.h  effect.cpp  effect.h  main.cpp  panner.h  waveshaper.cpp  waveshaper.h
.jens/: CMakeConfig_Jens.txt  CMakeLists_Roel.txt  test  test.cpp
Bela/: render.cpp
Documentation/: AudioFlow.drawio  Class_Diagram.drawio  Reflectie_Roel.md  Systeem_Diagram
Prototype/: AudioFlow.drawio  Class_Diagram.drawio  Protoype.maxpat  Subtractive_Synth.maxpat  flanger.gendsp
include/: chorus.h  decorrelator.h  delay.h  effect.h  effectBank.h  filter.h  flanger.h  madPanner  oscillator.h  panner.h  rack.h  reverb.h  sawtooth.h  sine.h  triangle.h  waveshaper.h
libs/: CircularBuffer.h  Util.h  jack_module.h  osc.h  util.h
src/: CircularBuffer.cpp  chorus.cpp  circularBuffer.cpp  decorrelator.cpp  delay.cpp  effect.cpp  effectBank.cpp  filter.cpp  flanger.cpp  main.cpp  osc.cpp  osc_client.cpp  osc_server.cpp  oscillator.cpp  panner.cpp  rack.cpp  reverb.cpp  util.cpp  waveshaper.cpp
